// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cn=1 — Mash: NP→S2→NP (Holy Sword) wave damage snapshot 1`] = `
Object {
  "1": Object {
    "cleared": false,
    "damageDealt": 182231,
    "hpRequired": 340551,
  },
}
`;

exports[`cn=57 — Cu Chulainn (Caster) NP3 wave damage snapshot 1`] = `
Object {
  "1": Object {
    "cleared": false,
    "damageDealt": 63453,
    "hpRequired": 340551,
  },
}
`;

exports[`cn=61 — Elisabeth Halloween NP1 wave damage snapshot 1`] = `
Object {
  "1": Object {
    "cleared": false,
    "damageDealt": 28893,
    "hpRequired": 251609,
  },
}
`;

exports[`cn=66 — Anne B&M NP1 wave damage snapshot 1`] = `
Object {
  "1": Object {
    "cleared": false,
    "damageDealt": 13291,
    "hpRequired": 340551,
  },
}
`;

exports[`cn=101 — Rama (Saber) NP1 wave damage snapshot 1`] = `
Object {
  "1": Object {
    "cleared": false,
    "damageDealt": 25477,
    "hpRequired": 340551,
  },
}
`;

exports[`cn=108 — Altria (Lancer) NP1 wave damage snapshot 1`] = `
Object {
  "1": Object {
    "cleared": false,
    "damageDealt": 29915,
    "hpRequired": 181138,
  },
}
`;

exports[`cn=161 — Hijikata NP1 (damageNpHpRatio) wave damage snapshot 1`] = `
Object {
  "1": Object {
    "cleared": false,
    "damageDealt": 57806,
    "hpRequired": 340551,
  },
}
`;

exports[`cn=167 — Kiara NP1 (classRelation) wave damage snapshot 1`] = `
Object {
  "1": Object {
    "cleared": false,
    "damageDealt": 24153,
    "hpRequired": 251609,
  },
}
`;

exports[`cn=239 — Kama NP1 (classRelation) wave damage snapshot 1`] = `
Object {
  "1": Object {
    "cleared": false,
    "damageDealt": 37987,
    "hpRequired": 340551,
  },
}
`;

exports[`cn=248 — Aśvatthāman NP5 wave damage snapshot 1`] = `
Object {
  "1": Object {
    "cleared": false,
    "damageDealt": 32794,
    "hpRequired": 340551,
  },
}
`;

exports[`cn=257 — Bartholomew Roberts NP1 (damageNpRare) wave damage snapshot 1`] = `
Object {
  "1": Object {
    "cleared": false,
    "damageDealt": 10473,
    "hpRequired": 340551,
  },
}
`;

exports[`cn=268 — Space Ishtar NP1 (default) wave damage snapshot 1`] = `
Object {
  "1": Object {
    "cleared": false,
    "damageDealt": 54122,
    "hpRequired": 251609,
  },
}
`;

exports[`cn=300 — Arash w1 die-sub wave damage snapshot 1`] = `null`;

exports[`cn=417 — Ereshkigal NP1 (damageNpBattlePointPhase) wave damage snapshot 1`] = `
Object {
  "1": Object {
    "cleared": false,
    "damageDealt": 40686,
    "hpRequired": 340551,
  },
}
`;

exports[`cn=421 — BB Dubai NP1 (default) wave damage snapshot 1`] = `
Object {
  "1": Object {
    "cleared": false,
    "damageDealt": 40477,
    "hpRequired": 251609,
  },
}
`;

exports[`cn=423 — MHXX Alter NP1 (damageNpAndOrCheckIndividuality) wave damage snapshot 1`] = `
Object {
  "1": Object {
    "cleared": false,
    "damageDealt": 25592,
    "hpRequired": 340551,
  },
}
`;

exports[`cn=426 — Kazuradrop: S3~enemy1 then NP wave damage snapshot 1`] = `
Object {
  "1": Object {
    "cleared": false,
    "damageDealt": 83457,
    "hpRequired": 340551,
  },
}
`;
